# rust-pinyin

./: .bumpversion.cfg  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  DEVELOP.md  LICENSE  Makefile  README.md  aliases.js  appveyor.yml  build.rs  changelog.md  data  fn.main.html  fn.pinyin.html  index.html  params.json  search-index.js  stability.html  stability.json
.github/workflows/: ci.yml
ci/: coveralls.sh  install_extra.sh  script.sh
coverage-check/: Cargo.toml
coverage-check/src/: main.rs
examples/: basic.rs  main.rs
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Send.js  trait.Sync.js
mk_dict/: all.html  index.html
pinyin/: Args.t.html  all.html  enum.Style.html  fn.lazy_pinyin.html  fn.pinyin.html  index.html  lazy_pinyin.v.html  pinyin.v.html  sidebar-items.js  stability.html  stability.json  static.PHONETIC_SYMBOL_MAP.html  static.PINYIN_MAP.html  struct.Args.html
pinyin/dict/: PHONETIC_SYMBOL_MAP.v.html  PINYIN_MAP.v.html  static.PHONETIC_SYMBOL_MAP.html  static.PINYIN_MAP.html
src/: build.rs  c_ffi.rs  compat.rs  data.rs  dict.rs  integer_hasher.rs  lib.rs  macros.rs  main.rs  phonetic_symbol.rs  pinyin.rs  pinyin_dict.rs  pinyin_map.rs  pinyin_multi.rs
src/mk_dict/: mk_dict.rs.html
src/pinyin/: lib.rs.html
src/pinyin/src/: lib.rs.html
tests/: compat.rs  integer_hasher.rs  lib.rs  pinyin.rs  pinyin_multi_additional.rs  special_pinyin.rs  test_case.rs
tests/pinyin/: a.txt  a.txt-first_letter  a.txt-plain  a.txt-with_tone  a.txt-with_tone_num  a.txt-with_tone_num_end  b.txt  b.txt-first_letter  b.txt-plain  b.txt-with_tone  b.txt-with_tone_num  b.txt-with_tone_num_end  c.txt  c.txt-first_letter  c.txt-plain  c.txt-with_tone  c.txt-with_tone_num  c.txt-with_tone_num_end
